--- a/style.css
+++ b/style.css
@@ -9,9 +9,20 @@ body {
     width: 50px;
 }
 
+.flex-row{
+    display: flex;
+    flex-direction: row;
+
+}
+
+.space{
+    padding: 0 10px 0 10px;
+}
+
 .header {
     display: flex;
     background-color: lightblue;
+    justify-content: space-between;
     padding: 1%;
     align-items: center;
     margin-left: -10px;
