--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
 .flex-row{
     display: flex;
     flex-direction: row;
-
 }
 
 .space{
-    padding: 0 10px 0 10px;
+    display: flex;
+    width: 130px;
+    justify-content: space-between;
 }
 
 .header {
